--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon build/index.js",
-    "start": "nodemon build/index.js",
-    "build": "tsc -w"
+    "start": "nodemon build/index.js"
   },
   "author": "Wen",
   "license": "ISC",
